# pyOpenMS

./: .gitignore  CMakeLists.txt  FOR_DEVELOPERS  README  build.sh  build_executable_installer.py  build_inplace.sh  build_installer.sh  build_zip_for_install.py  check_system.py  check_test_coverage.py  distribute-0.6.34-py2.7.egg  env.py  generate_code_and_cythonize.bat  generate_code_and_cythonize.sh  main_for_installer.py  run_cython.sh  run_memleak_tests.bat  run_memleak_tests.sh  run_unittests.sh  run_unittests_with_installed_pyopenms.bat  run_unittests_with_installed_pyopenms.sh  run_unittests_with_local_pyopenms.bat  run_unittests_with_local_pyopenms.sh  run_valgrind.sh  setup.py  setup_old.py  special_autowrap_conversionproviders.py
addons/: Param.pyx
helpers/: sysinfo.py
memoryleaktests/: testAll.py  testSpectrum.py
pxds/: BaseFeature.pxd  ConsensusFeature.pxd  DataValue.pxd  Feature.pxd  FeatureXMLFile.pxd  MSExperiment.pxd  MSSpectrum.pxd  MapAlignmentAlgorithmPoseClustering.pxd  MzDataFile.pxd  MzMLFile.pxd  MzXMLFile.pxd  Param.pxd  Peak2D.pxd  PeptideHit.pxd  ProteinHit.pxd  RichPeak1D.pxd  RichPeak2D.pxd  SpectrumSettings.pxd  UniqueIdInterface.pxd
pyOpenMS/: .gitattributes  License.txt  __init__.py  _pyOpenMS.cpp  pyOpenMS.cpp  sysinfo.py  version.py
pyOpenMS/cython_code/: DelegateClassGenerator.py  HelperFunctions.h  Types.py  (+15 more)
pyTOPP/: FeatureFinderCentroided.py  MapAlignerPoseClustering.py  PeakPickerHiRes.py
pyopenms/: .gitattributes  __init__.py  param_addons.pyx  pyopenms.pyx  spectrum_addons.pyx
tests/: test.featureXML  test.ini
unittests/: get_sysinfo.py  test.featureXML  testBasisObjects.py  testContainers.py  testDifferentFileFormats.py  testFileHandler.py  testFilters.py  testMSExperiment.py  testMapAlignment.py  testModuleLoad.py  testParam.py  testPeakPicking.py  testPyMSExperiment.py
(+124 files in other folders)
